# SymbolicLivenessAnalysis

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: find_llvm.cmake
cmake/modules/: FindCRYPTOPP.cmake  FindCryptoPP.cmake
include/klee/: ExecutionState.h  Interpreter.h  klee.h
include/klee/Config/: config.h.cmin
include/klee/Core/: Interpreter.h
include/klee/Internal/Module/: InstructionInfoTable.h  KModule.h
include/klee/Internal/Support/: SHA1.h
include/klee/Module/: InstructionInfoTable.h  KModule.h
include/klee/Support/: InfiniteLoopDetectionFlags.h
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  DebugInfiniteLoopDetection.cpp  DebugInfiniteLoopDetection.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  InfiniteLoopDetectionFlags.cpp  InfiniteLoopDetectionFlags.h  Memory.cpp  Memory.h  MemoryFingerprint.cpp  MemoryFingerprint.h  MemoryManager.cpp  MemoryManager.h  MemoryState.cpp  MemoryState.h  MemoryTrace.cpp  MemoryTrace.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h
lib/Expr/: ExprPPrinter.cpp
lib/Module/: CMakeLists.txt  KModule.cpp  LiveRegister.cpp  ModuleUtil.cpp  Passes.h
runtime/: Makefile.cmake.bitcode.rules
runtime/FreeStanding/: memcmp.c  memcpy.c  memmove.c  memset.c
runtime/POSIX/: fd_64.c  klee_init_env.c
scripts/: opt-sanitized.sh
test/: lit.cfg
test/Liveness/: circular-list.c  control-flow.c  empty_loops.ll  freemalloc.c  getopt.c  mallocfree.c  memcpy.c  nothing.c  overflow-uint8.c  passed-alloca-finite.c  passed-alloca-infinite-simple.c  passed-alloca-infinite.c  realloc.c  recursion-mutual.c  recursion-yoyo.c  symbolic-index.c  whiletrue.c  whiletrue_write.c
test/Passes/LiveRegister/: arguments.ll  basic.ll  phi-consumed.ll  phi-dead.ll  phi-live.ll  phi-loop.ll  phi-multi.ll  phi-ssa.ll
test/regression/: 2021-09-29-tail-recursion-with-external-call.ll
tools/: CMakeLists.txt
tools/klee/: main.cpp
tools/klee-replay/: klee_init_env.c
unittests/: CMakeLists.txt  parseAssembly.h
unittests/Module/: CMakeLists.txt  ModuleTest.cpp
